# random-events-lib

./: CMakeLists.txt  build_random_events.sh
src/client_program/: CMakeLists.txt  client.cpp
src/client_program/include/: client.h
src/random_events/: CMakeLists.txt
src/random_events/cmake/: Config.cmake.in  FindOrFetch.cmake  RandomEventsDependencies.cmake
test/: CMakeLists.txt
test/cmake/: RandomEventsTestDependencies.cmake
